syntax = "proto3";

package https_outcalls_service.v1;

message HttpHeader {
  string name = 1;
  string value = 2;
}

enum HttpMethod {
  HTTP_METHOD_UNSPECIFIED = 0;
  HTTP_METHOD_GET = 1;
  HTTP_METHOD_POST = 2;
  HTTP_METHOD_HEAD = 3;
}

message HttpsOutcallRequest {
  string url = 1;
  bytes body = 2;
  repeated HttpHeader headers = 3;
  HttpMethod method = 4;
  uint64 max_response_size_bytes = 5;
  reserved 6;
  repeated string socks_proxy_addrs = 7;
}

message HttpsOutcallResponse {
  uint32 status = 1;
  repeated HttpHeader headers = 2;
  bytes content = 3;
}

enum CanisterHttpErrorKind {
  CANISTER_HTTP_ERROR_KIND_UNSPECIFIED = 0;
  CANISTER_HTTP_ERROR_KIND_INVALID_INPUT = 1;
  CANISTER_HTTP_ERROR_KIND_CONNECTION = 2; 
  CANISTER_HTTP_ERROR_KIND_LIMIT_EXCEEDED = 4;
  CANISTER_HTTP_ERROR_KIND_INTERNAL = 5;
}

message CanisterHttpError {
  CanisterHttpErrorKind kind = 1;
  string message = 2;
}

message CanisterHttpAdapterMetrics {
  uint64 downloaded_bytes = 1;
}

message HttpsOutcallResult {
  CanisterHttpAdapterMetrics metrics = 1;
  oneof result {
    HttpsOutcallResponse response = 2;
    CanisterHttpError error = 3;
  }
}

service HttpsOutcallsService {
  rpc HttpsOutcall(HttpsOutcallRequest) returns (HttpsOutcallResult);
}
